# make-n

./: .gitignore  Cargo.toml  README.md
docs/: 0.bootstrap.js  bootstrap.js  index.html
math24wasm/: Cargo.toml
math24wasm/src/: lib.rs
math24wasm/www/: css.css  index.html  index.js  package-lock.json  package.json  webpack.config.js
solver/: Cargo.toml
solver/src/: lib.rs
src/: main.rs
